--- a/src/components/cards/Card.scss
+++ b/src/components/cards/Card.scss
@@ -1,3 +1,4 @@
+@import '../Colors.scss';
 @import '../Fonts.scss';
 @import '../Width.scss';
 
@@ -5,9 +6,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border-radius: 1rem;
     padding: 1rem;
     margin: 1rem 0;
+    border-width: 0 1px 0 1rem;
+    border-style: solid;
 }
 
 .CardContainer {
@@ -44,10 +46,6 @@
     width: 4rem;
 }
 
-.CardImage.Filter {
-    filter: brightness(0) invert(1);
-}
-
 .CardTextContainer {
     display: flex;
     flex-direction: column;
@@ -58,7 +56,13 @@
 .CardDescription,
 .CardDate {
     margin: 0;
-    color: white;
+    color: $color-light-primary;
+}
+
+.Dark .CardTitle,
+.Dark .CardDescription,
+.Dark .CardDate {
+    color: $color-dark-primary;
 }
 
 .CardTitle {
@@ -74,12 +78,16 @@
     line-height: 2rem;
     width: 8rem;
     margin: 0.25rem;
-    color: white;
+    color: $color-light-primary;
     text-align: center;
 }
 
+.Dark .CardAction {
+    color: $color-dark-primary;
+}
+
 .CardAction:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.025);
     cursor: pointer;
 }
 
