#107 Remove border on mobile

--- a/src/components/cards/Card.scss
+++ b/src/components/cards/Card.scss
@@ -94,6 +94,7 @@
 @media only screen and (max-width: $breakpoint-l) {
     .Card {
         padding: 1rem;
+        border-width: 0 0 0 0;
     }
 
     .CardContainer {
